--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Forget the telly, we just go to the crib
 And watch a movie in the jacuzzi, smoke L's while you do me
 </a>
 
-<a>[Hook: The Notorious B.I.G.]
+<p>[Hook: The Notorious B.I.G.]
 I love it when you call me big poppa
 Throw your hands in the air if you's a true player
 I love it when you call me big poppa
@@ -86,7 +86,7 @@ I love it when you call me big poppa
 If you got a gun up in your waist
 Please don't shoot up the place!
 ‘Cause I see some ladies tonight
-That should be having my baby, baby</a>
+That should be having my baby, baby</p>
     </div>
     <div id = "column_one">
       <img src="https://assets.audiomack.com/dj-arabmixtapes/8074f14cfa55c2e6dc6ab5bb05f7029c-275-275.jpeg" alt="Biggie" style=width="auto"; height="auto";>
