--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       </a> </p>
     </h1>
     <div id = "column_two">
-      <a> [Intro: The Notorious B.I.G. + (Puff Daddy)]
+      <p> [Intro: The Notorious B.I.G. + (Puff Daddy)]
 Uh, uh, check it out (yeah), uh
 Junior M.A.F.I.A., uh (hehe)
 Uh (I like this) yeah, yeah
 Nine-fo' (keep bangin')
-</a>
+</p>
 
-<a>
+<p>
 [Verse 1: The Notorious B.I.G.]
 To all the ladies in the place with style and grace
 Allow me to lace these lyrical douches in your bushes
@@ -38,9 +38,9 @@ No need to be greedy, I got mad friends with Benzes
 C-notes by the layers, true fuckin' players
 Jump in the Rover and come over
 Tell your friends jump in the GS3, I got the chronic by the tree
-</a>
+</p>
 
-<a>
+<p>
 [Hook: The Notorious B.I.G.]
 I love it when you call me big poppa
 Throw your hands in the air if you's a true player
@@ -52,9 +52,9 @@ If you got a gun up in your waist
 Please don't shoot up the place!
 ‘Cause I see some ladies tonight
 That should be having my baby, baby
-</a>
+</p>
 
-<a>
+<p>
 [Verse 2: The Notorious B.I.G.]
 Straight up, honey, really I'm askin'
 Most of these niggas think they be mackin', but they be actin'
@@ -74,7 +74,7 @@ Conversate for a few, ‘cause in a few we gon' do
 What we came to do, ain't that right, boo?
 Forget the telly, we just go to the crib
 And watch a movie in the jacuzzi, smoke L's while you do me
-</a>
+</p>
 
 <p>[Hook: The Notorious B.I.G.]
 I love it when you call me big poppa
